Add HTML5 page dynamic

--- a/MyCinema-html5/public_html/index.html
+++ b/MyCinema-html5/public_html/index.html
@@ -15,8 +15,8 @@ and open the template in the editor.
     </head>
     <body>
         <header class="page-heading">MyCinema</header>
-        <div class="cinema-panel">
-            <div class="cinema-panel-item">
+        <div class="cinema-panel" id="films-list">
+            <!--<div class="cinema-panel-item">
                 <img class="film-template" src="images/MissionImpossible.jpg" alt="film template">
                 <div class="film-description">
                     <p><strong>Mission Impossible</strong></p>
@@ -75,7 +75,7 @@ and open the template in the editor.
                         <span>19:00    21:00   23:00</span>
                     </p>
                 </div>
-            </div>
+            </div>-->
         </div>
     </body>
 </html>
